Update to fix wrapping words on next bunch

--- a/FreeWheeling.UI/Content/Site.css
+++ b/FreeWheeling.UI/Content/Site.css
@@ -249,6 +249,8 @@ padding: 10px;
 .btn {
     text-align:left;
     padding-left:10px;
+    word-wrap: break-word;
+    white-space: normal;
 }
 .btn-primary {
     background-color:#0068ac;
